============================================================================
SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
============================================================================

Version 6.7 - not yet released
* user interface
  - added AutoZoom gesture (up-down)
* map
  - terrain countour lines (#2451)
* waypoint editor
  - delete waypoint implemented

Version 6.6.1 - not yet released
* cross section
  - fix airspace display after display rotation (#2825)
* user interface
  - fix malformed name in airspace warning dialog (#2813)
* devices
  - indicate duplicate devices in list
  - allow using more than one TCP/UDP device
  - fix spurious errors after IOIO baud rate change (#2733, #2754)
* configuration
  - fix regression with polar configuration (#2803)

Version 6.6 - 2013/04/23
* map
  - optional distinct map zoom on each page (#1603)
  - add label selection "Task waypoints & airfields"
  - allow configuration of "Final glide bar" display (#2554)
  - new snail trail option "Vario-scaled dots and lines"
  - topography icons
  - don't draw pan info over north arrow (#2765)
* cross section
  - show airspace names (#1149, #2390)
  - use glide polar instead of current glide ratio (#2687)
* infoboxes
  - green InfoBox distance when inside observation zone (#2560)
  - limit the InfoBox aspect ratio
  - new InfoBox styles "Shaded" (#1852), "Glass" (#2466)
  - waypoint details button in target dialog (#1967)
  - show distance in radial InfoBox comment (#2577)
  - new InfoBox "ATC radial" with distance in nautical miles (#2269, #2706)
  - improved wind edit panel (#2770)
* user interface
  - replay fast-forward
  - new waypoint location editor (#343)
  - show required glide ratio in waypoint details (#1573)
  - add airspace ack button to map item list (#2139)
  - additionally show airspace altitude in feet (#2379)
  - show more files in replay file picker (#2582)
  - clicking with Ctrl key pressed moves the simulator (#199)