@@ -1,45 +1,0 @@
-<?xml version="1.0"?>
-
-<Panel>
-  <Panel Name="pnlPolarDetails" X="2" Y="2" Border="30" Height="108" Width="-2">
-    <Label Name="lblPolar" Caption="Polar" X="2" Y="2" Height="16" Width="-60" />
-    <Label Name="lblPolarInvalid" Caption="Invalid" X="-50" Y="2" Height="16" CaptionColor="0xFF0000" />
-
-    <Widget Name="shape" X="2" Width="-2" Height="45"/>
-    
-    <Edit Name="prpPolarReferenceMass" Caption="Reference mass" Expert="1" Y="62" Width="-2" Height="22" CaptionWidth="150"
-      Help="Reference weight at which the given polar is valid.">
-      <DataField DataType="double" DisplayFormat="%.0f kg" EditFormat="%.0f" Min="0" Max="1000" Step="5" OnDataAccess="OnFieldData" />
-    </Edit>
-    
-    <Edit Name="prpPolarDryMass" Caption="Dry mass" Expert="1" Y="84" Width="-2" Height="22" CaptionWidth="150"
-      Help="Dry mass of the glider (pilot + empty mass).">
-      <DataField DataType="double" DisplayFormat="%.0f kg" EditFormat="%.0f" Min="0" Max="1000" Step="5" OnDataAccess="OnFieldData" />
-    </Edit>
-  </Panel>
-
-  <Edit Name="prpPolarWingArea" Caption="Wing area" Expert="1" X="2" Width="-2" Height="22" CaptionWidth="150"
-    Help="Optional specification of the wing area.">
-    <DataField DataType="double" DisplayFormat="%.1f m²" EditFormat="%.1f" Min="0" Max="20" Step="0.1" OnDataAccess="OnFieldData" />
-  </Edit>
-
-  <Edit Name="prpMaxManoeuveringSpeed" Caption="V rough air" X="2" Width="-2" Height="22" CaptionWidth="150"
-    Help="Optional the maximum manoeuvring speed can be entered on this page to prevent the glide computer from commanding unrealistic cruise speeds.">
-    <DataField DataType="double" DisplayFormat="%.0f %s" EditFormat="%.0f" Min="0" Max="300" Step="5"/>
-  </Edit>
-
-  <Edit Name="prpHandicap" Caption="Handicap" X="2" Width="-2" Height="22" CaptionWidth="150"
-    Help="The handicap factor used for the OnLine Contest scoring.">
-    <DataField DataType="double" DisplayFormat="%.0f %%" EditFormat="%.0f" Min="50" Max="150" Step="1"/>
-  </Edit>
-
-  <Edit Name="prpPolarMaxBallast" Caption="Max. ballast" Expert="1" X="2" Width="-2" Height="22" CaptionWidth="150"
-    Help="Optional the amount of water ballast XCSoar refers to as 100% ballast. Set to zero if it does not apply.">
-    <DataField DataType="double" DisplayFormat="%.0f l" EditFormat="%.0f" Min="0" Max="500" Step="5" OnDataAccess="OnFieldData" />
-  </Edit>
-
-  <Edit Name="prpBallastSecsToEmpty" Caption="Dump time" X="2" Width="-2" Height="22" CaptionWidth="150"
-    Help="The time in seconds to dump full ballast.">
-    <DataField DataType="time" Min="10" Max="300" Step="5"/>
-  </Edit>
-</Panel>
